# backgammon

./: .gitignore  API.py  API_old.py  pyproject.toml  requirements.txt  setup.py
api/: flask_init.py  mongo_init.py
api/actions/: api_actions.py  db_actions.py
api/utils/: utils.py
gym_backgammon/: __init__.py
gym_backgammon/envs/: __init__.py
new_nural_network/: agent_vs_agent_eval.py  agents.py  data_gen.py  evaluate_config.py  evaluate_process.py  khachapuri_research.py  learn_process.py  main.py  model.py  multiprocessing_experiments.py  some_tests.py  start_train_config  train_config.py  utils.py
new_nural_network/saved/: 100000.tar  1000000.tar  200000.tar  50000.tar  700000.tar  800000.tar  900000.tar  950000.tar  LongGammon_450000.tar  comments.txt  exp1_20220216_0131_18_095446_150000.tar  exp1_20220216_1256_15_080498_250000.tar  exp1_20220216_1637_14_056981_300000.tar  exp1_20220216_2021_11_554127_350000.tar  exp1_20220217_0011_11_446917_400000.tar  exp1_20220217_0401_50_959186_450000.tar  exp1_20220217_0743_59_405727_500000.tar  exp1_20220217_1125_31_456007_550000.tar  exp1_20220217_1505_34_673609_600000.tar  exp1_20220217_1859_13_910707_650000.tar  exp1_20220218_0254_24_649972_750000.tar  exp1_20220218_1018_38_900737_850000.tar  long_backgammon_20220321_0536_17_742170_100000.tar  long_backgammon_20220321_1540_35_260024_150000.tar  long_backgammon_20220322_0236_41_305994_200000.tar  long_backgammon_20220322_1309_35_063658_250000.tar  long_backgammon_20220323_0047_30_755847_300000.tar  long_backgammon_20220323_1129_46_521572_350000.tar  parameters.txt  (+1 more)
(+169 files in other folders)
