[tool.poetry]
name = "backgammon"
version = "0.1.0"
description = ""
authors = ["klarefor1 <klarefor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.1.12"
gym = "^0.21.0"
torch = "^1.10.2"
tb-nightly = "^2.9.0-alpha.20220203"
numpy = "^1.22.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
